<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Information"

    android:orientation="vertical">

    <TextView
        android:id="@+id/food_name"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/serving_wt"
                android:layout_height="50dp"
                android:layout_width="100dp"
                android:gravity="center"
                android:text= "@string/serving_wt"
                android:textColor="#000000" />
            <TextView
                android:id="@+id/serving_wt_data"
                android:layout_height="50dp"
                android:layout_width="200dp"
                android:gravity="center"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nutr_cont1"
                android:layout_height="50dp"
                android:layout_width="100dp"
                android:gravity="center"
                android:text="@string/nutr_cont1"
                android:textColor="#000000" />
            <TextView
                android:id="@+id/nutr_cont1_data"
                android:layout_height="50dp"
                android:layout_width="200dp"
                android:gravity="center"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nutr_cont2"
                android:layout_height="50dp"
                android:layout_width="100dp"
                android:gravity="center"
                android:text="@string/nutr_cont2"
                android:textColor="#000000" />
            <TextView
                android:id="@+id/nutr_cont2_data"
                android:layout_height="50dp"
                android:layout_width="200dp"
                android:gravity="center"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nutr_cont3"
                android:layout_height="50dp"
                android:layout_width="100dp"
                android:gravity="center"
                android:text="@string/nutr_cont3"
                android:textColor="#000000" />
            <TextView
                android:id="@+id/nutr_cont3_data"
                android:layout_height="50dp"
                android:layout_width="200dp"
                android:gravity="center"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nutr_cont4"
                android:layout_height="50dp"
                android:layout_width="100dp"
                android:gravity="center"
                android:text="@string/nutr_cont4"
                android:textColor="#000000" />
            <TextView
                android:id="@+id/nutr_cont4_data"
                android:layout_height="50dp"
                android:layout_width="200dp"
                android:gravity="center"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nutr_cont5"
                android:layout_height="50dp"
                android:layout_width="100dp"
                android:gravity="center"
                android:text="@string/nutr_cont5"
                android:textColor="#000000" />
            <TextView
                android:id="@+id/nutr_cont5_data"
                android:layout_height="50dp"
                android:layout_width="200dp"
                android:gravity="center"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nutr_cont6"
                android:layout_height="50dp"
                android:layout_width="100dp"
                android:gravity="center"
                android:text="@string/nutr_cont6"
                android:textColor="#000000" />
            <TextView
                android:id="@+id/nutr_cont6_data"
                android:layout_height="50dp"
                android:layout_width="200dp"
                android:gravity="center"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nutr_cont7"
                android:layout_height="50dp"
                android:layout_width="100dp"
                android:gravity="center"
                android:text="@string/nutr_cont7"
                android:textColor="#000000" />
            <TextView
                android:id="@+id/nutr_cont7_data"
                android:layout_height="50dp"
                android:layout_width="200dp"
                android:gravity="center"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nutr_cont8"
                android:layout_height="50dp"
                android:layout_width="100dp"
                android:gravity="center"
                android:text="@string/nutr_cont8"
                android:textColor="#000000" />
            <TextView
                android:id="@+id/nutr_cont8_data"
                android:layout_height="50dp"
                android:layout_width="200dp"
                android:gravity="center"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nutr_cont9"
                android:layout_height="50dp"
                android:layout_width="100dp"
                android:gravity="center"
                android:text="@string/nutr_cont9"
                android:textColor="#000000" />
            <TextView
                android:id="@+id/nutr_cont9_data"
                android:layout_height="50dp"
                android:layout_width="200dp"
                android:gravity="center"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/animal_plant"
                android:layout_height="50dp"
                android:layout_width="100dp"
                android:gravity="center"
                android:text="@string/animal_plant"
                android:textColor="#000000" />
            <TextView
                android:id="@+id/animal_plant_data"
                android:layout_height="50dp"
                android:layout_width="200dp"
                android:gravity="center"
                android:textColor="#000000" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>