<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="devs.mulham.raee.sample.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <devs.mulham.horizontalcalendar.HorizontalCalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            app:textColorSelected="#FFFF"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="435dp"
        android:layout_below="@+id/appBar"
        android:layout_marginTop="2dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nutr_cont1"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/nutr_cont1"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/nutr_cont1_data"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nutr_cont2"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/nutr_cont2"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/nutr_cont2_data"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nutr_cont3"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/nutr_cont3"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/nutr_cont3_data"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nutr_cont4"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/nutr_cont4"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/nutr_cont4_data"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nutr_cont5"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/nutr_cont5"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/nutr_cont5_data"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nutr_cont6"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/nutr_cont6"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/nutr_cont6_data"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nutr_cont7"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/nutr_cont7"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/nutr_cont7_data"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nutr_cont8"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/nutr_cont8"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/nutr_cont8_data"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nutr_cont9"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/nutr_cont9"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/nutr_cont9_data"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/animal_plant"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/animal_plant"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/animal_plant_data"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="#000000" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
